<resources>
    <string name="app_name">warn App</string>

    <string name="Username">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="Email">Correo electrónico</string>

    <string name="button_login">Iniciar Sesión</string>
    <string name="button_register">Registrate</string>
    <string name="button_create_account">Crear cuenta</string>
    <string name="button_SOS">S.O.S.</string>
    <string name="button_create_alert">Crear Alerta</string>
    <string name="button_Comments">Comentarios</string>
    <string name="button_maps">Mapa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="title_activity_main">Bienvenido</string>

    <string name="Username1">Juan Perez</string>
    <string name="Username2">Carlos Martinez</string>
    <string name="Username3">Ana Rodriguez</string>
    <string name="escribe_la_alerta">Escribe los detalles</string>
    <string name="colocar_titulo">Coloca el título de la alerta</string>
</resources>
