<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.mycompany.warnapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/button_SOS"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="135dp"
        android:layout_height="128dp"
        android:text="@string/button_SOS"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/button_Create_alert"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:onClick="notificar"
        android:text="@string/button_create_alert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_SOS"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/button_comments"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:onClick="comentarios"
        android:text="@string/button_Comments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Create_alert"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/button_maps"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:onClick="mapa"
        android:text="@string/button_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_comments"
        app:layout_constraintVertical_bias="0.281" />
</android.support.constraint.ConstraintLayout>
