<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.mycompany.warnapp.comments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="487dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="6dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Busqueda"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="114dp"
                android:layout_height="68dp"
                android:layout_weight="2"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="153dp"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Username1"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="153dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="muy buena herramienta, debe ser usada y difundida por las entidades publicas para que los ciudadanos colaboren con la prevención de violencia, desorden social, etc."
                    android:textSize="10sp"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="272dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="94dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="68dp"
                android:layout_height="83dp"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="37dp"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Username2"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="67dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="283dp"
                    android:layout_height="67dp"
                    android:text="La idea esta muy buena, pero a parte de agregar amigos me gustaria conectar con personas a ciertos km's alrededor y enterarme de las cosas que ahi estan pasando. Pensaba en &quot;autorizar&quot; 3 km alrededor (por ejemplo) y automaticamente conectar con gente que tambien 'autorizo&quot; lo mismo."
                    android:textSize="10sp"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="93dp" />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="137dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="246dp"
            tools:srcCompat="@tools:sample/avatars[1]" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Username3"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="246dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="muy buena herramienta, debe ser usada y difundida por las entidades publicas para que los ciudadanos colaboren con la prevención de violencia, desorden social, etc."
                android:textSize="10sp"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="179dp" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
